--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.6.1",
+    "dotenv": "^10.0.0",
+    "esbuild": "^0.12.20",
+    "esbuild-register": "^3.0.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.4",
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "build": "tsc",
+    "start": "node -r esbuild-register -r dotenv/config src/index.ts",
     "test": "jest"
+  },
+  "dependencies": {
+    "aws-iot-device-sdk-v2": "^1.5.5",
+    "yargs": "^17.1.1"
   }
 }
